--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@ transform: scale(1.2);
 
 <body class="bg-cover bg-center bg-no-repeat bg-[url('logo.jpg')] text-white flex items-center justify-center min-h-screen minabox">
 
-    <div class="text-center p-8 rounded-xl shadow-lg w-full max-w-lg">
+    <div class="text-center p-4 rounded-xl shadow-lg w-full max-w-lg">
         <div class="grid place-items-center">
         <img src="logo.jpg" alt="" class="w-20 h-20 ">
     </div>
         <h2 class="text-xl font-bold mb-4 mt-2 font-serif responsive-text">BIGGEST TIPPER OF TELEGRAM</h2>
-        <h1 class="animated-name mb-6">👑SALIM BOMBAY 👑</h1>
+        <h1 class="animated-name mb-3">👑SALIM BOMBAY 👑</h1>
 
        
     
@@ -149,14 +149,14 @@ transform: scale(1.2);
         </div>
       </div>
         <!-- Buttons -->
-        <button onclick="redirectToLink()" class="animated-button py-3 px-1  border-4 border-black rounded-sm text-lg my-6 hover:bg-blue-600 transition-all duration-200 shadow shadow-blue-600" >
+        <button onclick="redirectToLink()" class="animated-button py-3 px-1  border-4 border-black rounded-sm text-sm font-bold my-6 hover:bg-blue-600 transition-all duration-200 shadow shadow-blue-600" >
             <i class="fab fa-telegram mr-2"></i> <span> JOIN SALIM BOMBAY CHANNEL</span>
         </button>
 
         <!-- Additional Info -->
-        <h3 class="text-lg mb-3 font-serif font-bold">⚡ IPL/BBL/PSL PASSED ⚡</h3>
-        <h3 class="text-lg mb-3 font-serif font-bold">✔️ TOSS/MATCH/SESSION ✔️</h3>
-        <h3 class="text-lg mb-3 font-serif font-bold">🤝 BIGGEST TIPPER  🤝</h3>
+        <h3 class="text-sm mb-3 font-serif font-bold">⚡ IPL/BBL/PSL PASSED ⚡</h3>
+        <h3 class="text-sm mb-3 font-serif font-bold">✔️ TOSS/MATCH/SESSION ✔️</h3>
+        <h3 class="text-sm mb-3 font-serif font-bold">🤝 BIGGEST TIPPER  🤝</h3>
        <div class="flex justify-between gap-3 mb-3">
         <img src="img.jpeg" alt=".." class="w-16 h-16 rounded-lg ">
         <img src="img.jpg" alt=".." class="w-16 h-16 rounded-lg ">
