--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ transform: scale(1.2);
 
 <body class="bg-cover bg-center bg-no-repeat bg-[url('logo.jpg')] text-white flex items-center justify-center min-h-screen minabox">
 
-    <div class="text-center p-4 rounded-xl shadow-lg w-full max-w-lg">
+    <div class="text-center py-8 rounded-xl shadow-lg w-full max-w-lg">
         <div class="grid place-items-center">
         <img src="logo.jpg" alt="" class="w-20 h-20 ">
     </div>
